# diagram-generator

./: .gitignore  FEATURES.md  README.md  ROADMAP.md  ingestion_config.yaml  pyproject.toml  schema.json
.github/workflows/: ci.yml
demo_project/data/components/: system.yaml
demo_project/data/relationships/: adhoc.yaml  wiring.yaml
demo_project/data/views/: context.yaml
examples/complex_bank/components/: actors.yaml  external.yaml  infrastructure.yaml  services.yaml
examples/complex_bank/flows/: transfer.yaml
examples/complex_bank/relationships/: fast.flow  hybrid.flow  scratchpad.yaml  wiring.yaml
examples/complex_bank/views/: views.yaml
examples/enterprise/data/components/: payment.yaml
examples/eraser_parity/flows/: showcase.flow
examples/eraser_parity/views/: default.yaml
schemas/: component.schema.json  relationship.schema.json  view_config.schema.json
scripts/: ingest_flows.py  ingest_internal.py  verify_metadata.py
src/diagram_generator/cli/: docs.py  init.py  main.py  mcp_server.py  schema.py  serve.py  verify.py
src/diagram_generator/dsl/: grammar.lark
templates/: c4_container.j2  c4_context.j2  flowchart.j2  flowchart_swimlane.j2  legend.j2  sequence.j2  theme.j2
tests/: debug_val.py  test_diagram_syntax.py  test_dx.py  test_enterprise_features.py  test_error_handling.py  test_production_readiness.py  test_renderer_regressions.py  test_rich_schema.py  test_syntax_safety.py
tests/data/components/: rich_example.yaml
tests/data/flows/: flows.yaml
tests/data/relationships/: relationships.yaml
tests/data/views/: views.yaml
(+17 files in other folders)
